# used_car_price_prediction

./: .gitignore  README.md  Used_car1.ipynb  app.py  flaskapp.py  pyproject.toml  requrements.txt
artefacts/: columns.json
models/: util.py
modules/: util.py
notebook/: Used_car1.ipynb
templates/: index.html
