[tool.poetry]
name = "used_car_price_prediction"
version = "0.1.0"
description = "ML model to predict car price"
authors = ["ibrhimkaleel@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.2"
pandas = "1.4.3"
numpy = "1.23.2"
requests = "2.28.1"
scikit-learn = "1.1.2"
pickle4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"